# ln

./: .gitignore  Cargo.toml  README.md
examples/: basics.rs  beads.rs  beads_no_filter.rs  beads_png.rs  csg.rs  debug_nonoverlap.rs  debug_overlap.rs  debug_sidebyside.rs  debug_visibility.rs  example0.rs  example1.rs  function.rs  graph.rs  outline.rs  outline_cone.rs  outline_cylinder.rs  render_sidebyside.rs  simple_sphere_test.rs  skyscrapers.rs  slicer.rs  small_spheres_test.rs  suzanne.rs  test.rs
examples/typst_plugin/: Cargo.toml  README.md  beads.typ  lib.typ  ln_example.typ
examples/typst_plugin/docs/: manual.typ
examples/typst_plugin/examples/: func.typ  ln_example.typ
examples/typst_plugin/src/: constructor.rs  lib.rs
src/: axis.rs  bounding_box.rs  common.rs  cone.rs  csg.rs  cube.rs  cylinder.rs  filter.rs  function.rs  hit.rs  lib.rs  matrix.rs  mesh.rs  obj.rs  path.rs  plane.rs  ray.rs  scene.rs  shape.rs  sphere.rs  stl.rs  tree.rs  triangle.rs  util.rs  vector.rs
