[package]
name = "larnt"
version = "0.1.0"
edition = "2021"
description = "The 3D Line Art Engine - A vector-based 3D renderer written in Rust"
license = "MIT"

[dependencies]
image = { version = "0.25", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[dev-dependencies]
image = "0.25"
